// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/PasswordReset should render password reset form successfully 1`] = `
<div
  class="container"
>
  <div>
    Header
  </div>
  <form
    class=""
  >
    <div
      style="height: 74px; margin-bottom: 16px;"
    />
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="formEmail"
      >
        Email address
      </label>
      <input
        class="form-control"
        data-testid="passwordResetForm__email"
        id="formEmail"
        placeholder="Enter email"
        type="email"
        value=""
      />
    </div>
    <button
      class="btn btn-primary"
      data-testid="submitButton"
      disabled=""
      type="submit"
    >
      <div
        class="spinner-container"
      />
      <span>
        Send Email
      </span>
    </button>
  </form>
  <div>
    Footer
  </div>
</div>
`;

exports[`pages/PasswordReset should render password update form successfully if token provided 1`] = `
<div
  class="container"
>
  <div>
    Header
  </div>
  <form
    class=""
  >
    <div
      style="height: 50px; margin-bottom: 16px;"
    />
    <div
      class="form-group"
    >
      <label
        class="form-label"
      >
        New Password
      </label>
      <input
        class="form-control"
        data-testid="passwordUpdateForm__password"
        placeholder="Enter new password"
        type="password"
        value=""
      />
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        data-testid="passwordUpdateForm__passwordMatch"
        placeholder="Repeat password"
        type="password"
        value=""
      />
    </div>
    <button
      class="btn btn-primary"
      data-testid="submitButton"
      disabled=""
      type="submit"
    >
      <div
        class="spinner-container"
      />
      <span>
        Update Password
      </span>
    </button>
  </form>
  <div>
    Footer
  </div>
</div>
`;
